Fixed spacing issue with volume slider

--- a/src/Modules/PianoPlayer/index.css
+++ b/src/Modules/PianoPlayer/index.css
@@ -270,7 +270,7 @@ kbd {
   -webkit-appearance: none;
   box-shadow: none;
   height: 26px;
-  margin-top: -10px;
+  margin-top: -9px;
   width: 16px;
   border-radius: 22px;
   background: #FFFFFF;
